argo-setup/patches/patch-argocd-dex-server-resources.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-dex-server
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: dex
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 400m
              memory: 512Mi
