argo-setup/patches/patch-argocd-redis-ha-statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: argocd-redis-ha-server
spec:
  template:
    spec:
      containers:
        - name: redis
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: '1'
              memory: 1Gi
