argo-setup/patches/patch-argocd-server-resources.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-server
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: argocd-server
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: '1'
              memory: 1Gi
